# godot_rust_helper

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
platformer/rust-modules/: platformer_modules.gdnlib
src/: commands.rs  configs.rs  content.rs  main.rs  utils.rs
tests/: cli.rs  command-build.rs  command-create.rs  command-destroy.rs  command-new.rs  command-plugin.rs  test_utilities.rs
tests/platformer_modules/: Cargo.toml  godot-rust-helper.toml
tests/platformer_modules/src/: lib.rs
