[package]
name = "godot_rust_helper"
version = "1.1.0"
authors = ["Robert Corponoi <robertcorponoi@gmail.com>"]
license = "MIT"
description = "A simple CLI tool to help you create and update Rust modules for your Godot projects"
homepage = "https://github.com/robertcorponoi/godot_rust_helper"
repository = "https://github.com/robertcorponoi/godot_rust_helper"
readme = "README.md"
keywords = ["godot", "rust", "module", "NativeScript", "gdnlib"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
regex = "1"
path-clean = "0.1.0"
colored = "1.9"
notify = "4.0.12"
chrono = "0.4"
dunce = "1.0.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"