[package]
name = "godot_rust_helper"
version = "5.1.1"
authors = ["Robert Corponoi <robertcorponoi@gmail.com>"]
license = "MIT"
description = "A simple CLI tool to help you create and update Rust modules for your Godot projects"
homepage = "https://github.com/robertcorponoi/godot_rust_helper"
repository = "https://github.com/robertcorponoi/godot_rust_helper"
readme = "README.md"
keywords = ["godot", "rust", "module", "NativeScript", "gdnlib"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"
regex = "1.4.2"
colored = "2.0.0"
notify = "4.0.15"
chrono = "0.4.19"
dunce = "1.0.1"
pathdiff = "0.2.0"
path-slash = "0.1.3"
convert_case = "0.4.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"