[package]
name = "platformer_modules"
version = "0.1.0"
authors = ["Robert Corponoi <robertcorponoi@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[dependencies]
gdnative = "gdnative = { git = "https://github.com/GodotNativeTools/godot-rust" }"
godot_rust_helper_extensions = "godot_rust_helper_extensions = { git = "https://github.com/robertcorponoi/godot-rust-helper-extensions" }"
